Fixed alignment of switch control

--- a/components/complex/_checkbox-radio-inputs.scss
+++ b/components/complex/_checkbox-radio-inputs.scss
@@ -114,7 +114,7 @@
             background-color: $miroschka;
             width: rem(41px);
             height: rem(14px);
-            margin-top: rem(12px);
+            margin-top: rem(14px);
             border-radius: rem(8px);
         }
 
